# hexrag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  settings-mock.yaml  settings-ollama.yaml  settings-openai.yaml  settings-test.yaml  settings.yaml
.github/workflows/: ci.yml
sample_docs/: hexrag-overview.md
scripts/: ingest.py
src/hexrag/: __main__.py  di.py  launcher.py  main.py  paths.py
src/hexrag/api/: chat.py  completions.py  embeddings.py  health.py  ingest.py  openai_schema.py
src/hexrag/components/: embedding.py  llm.py  node_store.py  vector_store.py
src/hexrag/services/: chat.py  index.py  ingest.py
src/hexrag/settings/: loader.py  models.py
src/hexrag/ui/: app.py
tests/: conftest.py  test_components.py  test_ingest_retrieve.py  test_openai_api.py
