[project]
name = "hexrag"
version = "0.1.0"
description = "A clean, self-hosted RAG agent with an OpenAI-compatible API (FastAPI + LlamaIndex)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Krish Monpara" }]
keywords = ["rag", "llm", "fastapi", "llama-index", "openai", "self-hosted"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "injector>=0.21",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "llama-index-core>=0.11",
    "llama-index-readers-file>=0.2",
]

[project.optional-dependencies]
# Real model backends — install only the one you want to run.
ollama = [
    "llama-index-llms-ollama>=0.3",
    "llama-index-embeddings-ollama>=0.3",
]
openai = [
    "llama-index-llms-openai>=0.2",
    "llama-index-embeddings-openai>=0.2",
]
huggingface = [
    "llama-index-embeddings-huggingface>=0.3",
]
chroma = [
    "llama-index-vector-stores-chroma>=0.2",
    "chromadb>=0.5",
]
ui = [
    "gradio>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
hexrag = "hexrag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexrag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends)

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
